# learn_unit_tests

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
my_pck/: __init__.py  bookstore.py  delivery.py  details_provider.py  order.py  product_manager.py  user.py
tests/: test_bookstore.py  test_delivery.py  test_order.py  test_product_manager.py  test_user.py
