[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-pck"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[tool.hatch.version]
path = "my_pck/__init__.py"
